--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "nouislider": "13.1.1",
         "react": "16.8.4",
         "react-chartjs-2": "2.7.4",
+        "react-collapse": "^5.0.1",
         "react-copy-to-clipboard": "5.0.1",
         "react-datetime": "2.16.3",
         "react-dom": "16.8.4",
