--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "homepage": "/",
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build && cp -r build/ ../backend/public",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "postbuild": "react-snap",
