--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-google-maps": "9.4.5",
         "react-router-dom": "4.3.1",
         "react-scripts": "2.1.8",
+        "react-select": "^3.0.8",
         "reactstrap": "7.1.0"
     },
     "devDependencies": {
