--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
         "react-collapse": "^5.0.1",
         "react-copy-to-clipboard": "5.0.1",
         "react-datetime": "2.16.3",
+        "react-dnd": "^2.6.0",
+        "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "16.8.4",
         "react-google-maps": "9.4.5",
         "react-router-dom": "4.3.1",
         "react-scripts": "2.1.8",
         "react-select": "^3.0.8",
+        "react-tag-input": "^6.2.1",
         "reactstrap": "7.1.0"
     },
     "devDependencies": {
