--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "chart.js": "2.7.3",
         "classnames": "2.2.6",
         "material-ui": "^0.20.2",
-        "moment": "2.24.0",
+        "moment": "^2.24.0",
         "node-sass": "4.11.0",
         "nouislider": "13.1.1",
         "react": "16.8.4",
@@ -52,6 +52,7 @@
         "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "16.8.4",
         "react-google-maps": "9.4.5",
+        "react-moment": "^0.9.7",
         "react-router-dom": "4.3.1",
         "react-scripts": "2.1.8",
         "react-select": "^3.0.8",
