--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dependencies": {
         "@material-ui/core": "^4.9.5",
         "@material-ui/lab": "^4.0.0-alpha.37",
+        "@sentry/browser": "^5.17.0",
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "2.2.6",
