--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "classnames": "2.2.6",
         "material-ui": "^0.20.2",
         "moment": "^2.24.0",
-        "node-sass": "4.11.0",
         "nouislider": "13.1.1",
         "react": "16.8.4",
         "react-chartjs-2": "2.7.4",
@@ -64,6 +63,7 @@
         "@types/googlemaps": "3.30.18",
         "@types/markerclustererplus": "2.1.33",
         "@types/react": "16.8.7",
+        "node-sass": "^4.11.0",
         "react-snap": "^1.23.0",
         "typescript": "3.3.3333"
     }
