--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "material-ui": "^0.20.2",
         "moment": "^2.24.0",
         "nouislider": "13.1.1",
+        "pdf-viewer-reactjs": "^2.0.7",
         "react": "16.8.4",
         "react-chartjs-2": "2.7.4",
         "react-collapse": "^5.0.1",
