--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/markerclustererplus": "2.1.33",
         "@types/react": "16.8.7",
         "node-sass": "^4.11.0",
+        "prop-types": "^15.7.2",
         "react-snap": "^1.23.0",
         "typescript": "3.3.3333"
     }
