--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "dependencies": {
         "@material-ui/core": "^4.9.5",
         "@material-ui/lab": "^4.0.0-alpha.37",
+        "@reduxjs/toolkit": "^1.4.0",
         "@sentry/browser": "^5.17.0",
         "axios": "^0.19.0",
+        "babel-polyfill": "^6.26.0",
         "chart.js": "2.7.3",
         "classnames": "2.2.6",
         "glob": "^7.1.6",
@@ -45,7 +47,7 @@
         "moment": "^2.24.0",
         "nouislider": "13.1.1",
         "pdf-viewer-reactjs": "^2.0.7",
-        "react": "16.8.4",
+        "react": "16.13.0",
         "react-chartjs-2": "2.7.4",
         "react-collapse": "^5.0.1",
         "react-copy-to-clipboard": "5.0.1",
@@ -55,11 +57,16 @@
         "react-dom": "16.8.4",
         "react-google-maps": "9.4.5",
         "react-moment": "^0.9.7",
-        "react-router-dom": "4.3.1",
+        "react-redux": "^7.2.1",
+        "react-router": "^5.2.0",
+        "react-router-dom": "5.1.2",
         "react-scripts": "2.1.8",
         "react-select": "^3.0.8",
         "react-tag-input": "^6.2.1",
         "reactstrap": "8.4.0",
+        "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.3.0",
         "replace-in-file": "^6.1.0"
     },
     "devDependencies": {
@@ -70,6 +77,7 @@
         "prop-types": "^15.7.2",
         "react-app-env": "^1.2.3",
         "react-snap": "^1.23.0",
+        "redux-devtools": "^3.6.1",
         "typescript": "3.3.3333"
     }
 }
