--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "classnames": "2.2.6",
         "glob": "^7.1.6",
         "localforage": "^1.9.0",
+        "lodash": "^4.17.20",
         "material-ui": "^0.20.2",
         "moment": "^2.24.0",
         "nouislider": "13.1.1",
